feat: enhance ProductServiceImpl with advanced filtering and sorting capabilities
- Introduce dynamic filtering and sorting for product listings based on various criteria such as category, brand, price range, stock status, and promotions.
- Implement new specifications for product queries, including average rating, keyword search, and promotional filters.
- Refactor listByPage method to utilize JPA Criteria API for improved query performance and flexibility.
- Add JoinHelper and RatingSortHelper classes to streamline join operations and apply Bayesian rating sorting.